--- a/datepicker.html
+++ b/datepicker.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Booking Form with Always-Visible Calendar</title>
+  <title>Booking Form with Map Location</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -12,13 +12,20 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
 
   <style>
-    /* Style for booked dates */
+    #map {
+      height: 300px;
+      margin-bottom: 1rem;
+    }
+
     .booked-date {
       background-color: #f8d7da !important;
       color: #721c24 !important;
-      pointer-events: none; /* Prevent interaction with booked dates */
+      pointer-events: none;
     }
   </style>
+
+  <!-- Google Maps API -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnGOd4MOLJ6bqjaJehTNaH18M9F_Dgt0I&libraries=places"></script>
 </head>
 <body>
   <div class="container mt-5">
@@ -38,32 +45,32 @@
             <small class="form-text text-muted">Enter a 10-digit mobile number.</small>
           </div>
 
-          <div class="mb-3">
-            <label for="location" class="form-label">Package</label>
-            <select class="form-select" id="location" required>
-              <option value="" disabled selected>Select your Package</option>
-              <option value="basic">Basic</option>
-              <option value="pro">Pro</option>
-              <option value="ultra">Ultra</option>
-            </select>
-          </div>
-
-          <div class="mb-3">
+          <!-- Always-Visible Calendar -->
+          <div class="mb-4">
             <label for="datepicker" class="form-label">Select a Date</label>
-            <!-- Hidden input to store the selected date -->
+            <div id="inlineDatePicker"></div>
             <input type="hidden" id="datepicker" required>
             <div id="selectedDate" class="mt-2 text-success"></div>
           </div>
 
-          <div class="col-md-4">
-            <h4>Calendar</h4>
-            <div id="inlineDatePicker"></div>
+          <div class="mb-3">
+            <label for="location" class="form-label">Select Location</label>
+            <div id="map"></div>
           </div>
-          <button type="submit" class="btn btn-dark mt-3">Confirm Booking</button>
+
+          <div class="mb-3">
+            <label for="streetName" class="form-label">Street Name</label>
+            <input type="text" id="streetName" class="form-control" placeholder="Street name" readonly>
+          </div>
+
+          <div class="mb-3">
+            <label for="address" class="form-label">Address</label>
+            <input type="text" id="address" class="form-control" placeholder="Full address" readonly>
+          </div>
+
+          <button type="submit" class="btn btn-success">Confirm Booking</button>
         </form>
       </div>
-
-      <!-- Always-Visible Calendar -->
     </div>
   </div>
 
@@ -78,86 +85,124 @@
 
   <script>
     $(document).ready(function () {
-      // Array to store booked dates
       let bookedDates = [];
 
-      // Initialize the inline datepicker
       const inlineDatePicker = $('#inlineDatePicker').datepicker({
         format: 'mm/dd/yyyy',
         todayHighlight: true,
         startDate: '0d',
         beforeShowDay: function (date) {
-          // Format the date to 'mm/dd/yyyy'
           const dateString =
             ('0' + (date.getMonth() + 1)).slice(-2) + '/' +
             ('0' + date.getDate()).slice(-2) + '/' +
             date.getFullYear();
 
-          // Check if the date is in the bookedDates array
           if (bookedDates.includes(dateString)) {
             return {
-              classes: 'booked-date', // Add booked date style
-              tooltip: 'Already booked' // Optional tooltip
+              classes: 'booked-date',
+              tooltip: 'Already booked'
             };
           }
-          return true; // Return true for selectable dates
+          return true;
         }
       });
 
-      // Handle inline datepicker date selection
       inlineDatePicker.on('changeDate', function (e) {
         const selectedDate = e.format(0, 'mm/dd/yyyy');
-
         if (bookedDates.includes(selectedDate)) {
-          alert('This date is already booked. Please select another date.');
+          alert('This date is already booked.');
           return;
         }
-
-        // Set the hidden input value for form submission
         $('#datepicker').val(selectedDate);
         $('#selectedDate').text(`Selected Date: ${selectedDate}`);
       });
 
-      // Handle form submission
       $('#bookingForm').submit(function (event) {
-        event.preventDefault(); // Prevent form from reloading the page
+        event.preventDefault();
 
-        // Get the selected date
         const selectedDate = $('#datepicker').val();
-
         if (!selectedDate) {
-          alert('Please select a date before confirming your booking.');
+          alert('Please select a date.');
           return;
         }
 
-        // Collect form data
         const name = $('#name').val();
         const contact = $('#contact').val();
-        const location = $('#location').val();
+        const streetName = $('#streetName').val();
+        const address = $('#address').val();
 
-        if (bookedDates.includes(selectedDate)) {
-          alert('This date is already booked. Please select another date.');
+        if (!streetName || !address) {
+          alert('Please select a location.');
           return;
         }
 
-        // Add the selected date to the booked dates array
-        bookedDates.push(selectedDate);
+        if (bookedDates.includes(selectedDate)) {
+          alert('This date is already booked.');
+          return;
+        }
 
-        // Refresh the inline datepicker to show the updated booked dates
+        bookedDates.push(selectedDate);
         inlineDatePicker.datepicker('update');
 
-        // Display confirmation message
         alert(
-          `Booking Confirmed!\n\nDetails:\nName: ${name}\nContact: ${contact}\nLocation: ${location}\nDate: ${selectedDate}`
+          `Booking Confirmed!\n\nDetails:\nName: ${name}\nContact: ${contact}\nDate: ${selectedDate}\nStreet: ${streetName}\nAddress: ${address}`
         );
 
-        // Clear the form and reset the selected date
-        $('#name').val('');
-        $('#contact').val('');
-        $('#location').val('');
+        // Reset all form fields
+        $('#bookingForm')[0].reset();
         $('#datepicker').val('');
         $('#selectedDate').text('');
+        $('#streetName').val('');
+        $('#address').val('');
+        inlineDatePicker.datepicker('update', '');
       });
+
+      // Google Maps Integration
+      let map, marker, autocomplete;
+
+      function initMap() {
+        const initialLocation = { lat: 20.5937, lng: 78.9629 }; // Center of India
+
+        map = new google.maps.Map(document.getElementById("map"), {
+          center: initialLocation,
+          zoom: 5,
+        });
+
+        marker = new google.maps.Marker({
+          position: initialLocation,
+          map: map,
+          draggable: true,
+        });
+
+        const geocoder = new google.maps.Geocoder();
+
+        // On map click, update the marker and form
+        map.addListener("click", (event) => {
+          const clickedLocation = event.latLng;
+          map.setCenter(clickedLocation);
+          marker.setPosition(clickedLocation);
+
+          geocoder.geocode({ location: clickedLocation }, (results, status) => {
+            if (status === "OK" && results[0]) {
+              fillLocationDetails(results[0]);
+            } else {
+              alert("Unable to retrieve location details.");
+            }
+          });
+        });
+      }
+
+      // Fill form fields with location details
+      function fillLocationDetails(place) {
+        const components = place.address_components || [];
+        const street = components.find(c => c.types.includes("route"))?.long_name || "N/A";
+        const address = place.formatted_address || "N/A";
+
+        $('#streetName').val(street);
+        $('#address').val(address);
+      }
+
+      initMap();
     });
   </script>
 </body>
