--- a/shop.html
+++ b/shop.html
@@ -64,7 +64,7 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2">
-            <img src="images/WhatsApp Image 2025-01-21 at 9.21.34 AM.jpeg" alt="" height="30">
+            <a href="index.html"><img src="images/WhatsApp Image 2025-01-21 at 9.21.34 AM.jpeg" alt="" height="30"></a>
           </div>
 
           <div class="col-12 col-md-10 d-none d-xl-block">
